--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 ---
 layout: workshop
 root: .
-venue: FIXME      # brief name of host site
-address: FIXME    # street address of home location
-country: FIXME    # country (hyphenated if need be, like 'United-Kingdom')
-language: FIXME   # language code like 'en' or 'fr'
-latlng: FIXME     # fractional latitude and longitude like 41.7901128,-87.6007318
-humandate: FIXME  # use the format 'Feb 17-18, 2020' (without the quotes)
-humantime: FIXME  # use the format '9:00 am - 4:30 pm' (without the quotes)
-startdate: FIXME  # use YYYY-MM-DD format like 2015-01-01
-enddate: FIXME    # use YYYY-MM-DD format like 2015-01-02
-instructor: FIXME # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: FIXME     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: FIXME    # contact email address for workshop organizer
+venue: CU Boulder Libraries      # brief name of host site
+address: CU Boulder campus    # street address of home location
+country: USA    # country (hyphenated if need be, like 'United-Kingdom')
+language: en   # language code like 'en' or 'fr'
+latlng: 40.00796,-105.264317     # fractional latitude and longitude like 41.7901128,-87.6007318
+humandate: Aug 6-7, 2015  # use the format 'Feb 17-18, 2020' (without the quotes)
+humantime: 9:00 am - 4:30 pm  # use the format '9:00 am - 4:30 pm' (without the quotes)
+startdate: 2015-08-06  # use YYYY-MM-DD format like 2015-01-01
+enddate: 2015-08-07    # use YYYY-MM-DD format like 2015-01-02
+instructor: ['Mariela Perignon','Thomas Guignard'] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+helper: ['Shelley Knuth','Prasanth Prahladan']     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+contact: andrew.m.johnson@colorado.edu    # contact email address for workshop organizer
 etherpad:   # optional (insert the URL for your Etherpad if you're using one)
-eventbrite: # optional (delete this if not used, otherwise uncomment and provide 1234567890AB key for Eventbrite registration)
 ---
 <!--
   HEADER
@@ -24,23 +23,6 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
   changes are good.
 -->
 
-<!--
-  EVENTBRITE
-
-  This block includes the Eventbrite registration widget if
-  'eventbrite' has been set in the header.  You can delete it if you
-  are not using Eventbrite, or leave it in, since it will not be
-  displayed if the 'eventbrite' field in the header is not set.
--->
-{% if page.eventbrite %}
-<iframe
-  src="https://www.eventbrite.com/tickets-external?eid={{page.eventbrite}}&ref=etckt"
-  frameborder="0"
-  width="100%"
-  height="206px"
-  scrolling="auto">
-</iframe>
-{% endif %}
 
 <h2>General Information</h2>
 
@@ -76,7 +58,7 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
 -->
 <p>
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  The course is aimed at staff of the CU libraries system.
 </p>
 
 <!--
