--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: workshop
 root: .
 venue: CU Boulder Libraries      # brief name of host site
 address: CU Boulder campus    # street address of home location
-country: USA    # country (hyphenated if need be, like 'United-Kingdom')
+country: us    # country (hyphenated if need be, like 'United-Kingdom')
 language: en   # language code like 'en' or 'fr'
 latlng: 40.00796,-105.264317     # fractional latitude and longitude like 41.7901128,-87.6007318
 humandate: Aug 6-7, 2015  # use the format 'Feb 17-18, 2020' (without the quotes)
