--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: workshop
 root: .
 venue: CU Boulder Libraries      # brief name of host site
-address: CU Boulder campus    # street address of home location
+address: Gemmill Library in the Mathematics Building, CU Boulder campus
+    # street address of home location
 country: us    # country (hyphenated if need be, like 'United-Kingdom')
 language: en   # language code like 'en' or 'fr'
 latlng: 40.00796,-105.264317     # fractional latitude and longitude like 41.7901128,-87.6007318
