--- a/index.html
+++ b/index.html
@@ -565,18 +565,24 @@ etherpad: https://etherpad.mozilla.org/2015-08-06-cuboulder  # optional (insert 
 If you have trouble with installation, please come at 8:30 on the first morning and we'll help troubleshoot. You can also email <a href='mailto:perignon@colorado.edu'>the instructors</a> before the workshop.
 </p>
 <p>
-Open a command line window ('terminal' or, on windows, 'git bash'), and enter the following commands (without the $ sign)
+Open a command line window ('terminal' or, on windows, 'git bash'), and enter the following commands (without the $ sign):
+</p>
 
-$git --version
-$python --version
-$nano --version
-
+<p><code>
+$git --version<br>
+$python --version<br>
+$nano --version<br>
+</code></p>
+<p>
 If git and python and nano (a text editor) have been installed, those commands *should* print output version information.  The python version should include "Anaconda" and its version information.
-
+</p>
+<p>
 Ipython is a python development environment that comes pre-installed with the Anaconda python distribution.  To see if you have it, type the following into your terminal window:
-
+</p>
+<p><code>
 $ipython notebook
-
+</code></p>
+<p>
 This should open a programming interface in your default web browser.  It may take a few minutes the first time.  To close, just close your browser and then CTRL-C to end the process in the command line.  
 </p>
 <p>
