--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ If you have trouble with installation, please come at 8:30 on the first morning 
 </p>
 <p>
 Open a command line window ('terminal' or, on windows, 'git bash'), and enter the following commands (without the $ sign):
-<br><br><code>
+<br><code>
 $git --version<br>
 $python --version<br>
 $nano --version<br>
