--- a/index.html
+++ b/index.html
@@ -283,6 +283,11 @@ etherpad: https://etherpad.mozilla.org/2015-08-06-cuboulder  # optional (insert 
   need an up-to-date web browser.
 </p>
 
+<p>
+ Once you've installed all of the software below, test your installation
+ by following the instructions <a href="#setup">below</a> (Moved here from the Etherpad).
+ </p>
+
 <div id="shell"> <!-- Start of 'shell' section. -->
   <h3>The Bash Shell</h3>
 
@@ -559,7 +564,7 @@ etherpad: https://etherpad.mozilla.org/2015-08-06-cuboulder  # optional (insert 
 </div> <!-- End of 'SQLite' section. -->
 
 
-<h2 id="setup">Testing your installation</h2>
+<h2 id="test">Testing your installation</h2>
 
 <p>
 If you have trouble with installation, please come at 8:30 on the first morning and we'll help troubleshoot. You can also email <a href='mailto:perignon@colorado.edu'>the instructors</a> before the workshop.
