--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ etherpad: https://etherpad.mozilla.org/2015-08-06-cuboulder  # optional (insert 
 
 <p>
  Once you've installed all of the software below, test your installation
- by following the instructions <a href="#setup">below</a> (Moved here from the Etherpad).
+ by following the instructions <a href="#test">below</a> (Moved here from the Etherpad).
  </p>
 
 <div id="shell"> <!-- Start of 'shell' section. -->
