--- a/lessons/python-lessons/05-loops-and-functions.html
+++ b/lessons/python-lessons/05-loops-and-functions.html
@@ -184,7 +184,7 @@ surveys_df <span class="op">=</span> pd.read_csv(<span class="st">&#39;data/surv
     filename <span class="op">=</span> <span class="st">&#39;data/yearly_files/surveys&#39;</span> <span class="op">+</span> <span class="bu">str</span>(year) <span class="op">+</span> <span class="st">&#39;.csv&#39;</span>
     surveys_year.to_csv(filename)</code></pre></div>
 <p>Look inside the <code>yearly_files</code> directory and check a couple of the files you just created to confirm that everything worked as expected.</p>
-<h2 id="writing-unique-filencames">Writing unique filencames</h2>
+<h2 id="writing-unique-filenames">Writing unique filenames</h2>
 <p>Notice that the code above created a unique filename for each year.</p>
 <pre><code>filename = &#39;data/yearly_files/surveys&#39; + str(year) + &#39;.csv&#39;</code></pre>
 <p>Let’s break down the parts of this name:</p>
