add link to data.zip

--- a/lessons/python-lessons/index.html
+++ b/lessons/python-lessons/index.html
@@ -28,7 +28,8 @@
         <div class="col-md-10 col-md-offset-1">
                     <a href="index.html"><h1 class="title">Programming with Python</h1></a>
           <h2 class="subtitle">Python lessons for CU libraries</h2>
-          <ol style="list-style-type: decimal">
+          <p><a href="https://github.com/mperignon/2015-08-06-cuboulder/blob/gh-pages/lessons/python-lessons/data.zip">Download data</a></p>
+<ol style="list-style-type: decimal">
 <li><a href="01-intro.html">Starting with data</a></li>
 <li><a href="02-lists.html">Storing values in lists</a></li>
 <li><a href="03-dataframes.html">Indexing, slicing and subsetting DataFrames</a></li>
