--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ etherpad: https://etherpad.mozilla.org/2015-08-06-cuboulder  # optional (insert 
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/shell-novice/">Automating tasks with the Unix shell</a></td> </tr>
       <tr> <td>10:30</td> <td>Coffee</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:00</td>  <td><a href="lessons/python-lessons/">Building programs with Python</a></td> </tr>
