--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@ etherpad: https://etherpad.mozilla.org/2015-08-06-cuboulder  # optional (insert 
       <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
       <tr> <td>10:30</td>  <td>Coffee</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
+      <tr> <td>13:00</td>  <td><a href="http://labs.timtom.ch/sql-novice-library/index.html">Managing data with SQL</a></td> </tr>
       <tr> <td>14:30</td>  <td>Coffee</td> </tr>
+	  <tr> <td>15:00</td>  <td>Introduction to <a href="http://openrefine.org/">OpenRefine</a></td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
